fixed mobile/tablet/desktop; removed dashed border on mobile version per image

--- a/style/index.css
+++ b/style/index.css
@@ -383,11 +383,11 @@ a:hover {
     ======================= * do not touch!
     ======================= * fixxxxessss 
 /* */
-@media(min-width:801px){
+/* @media(min-width:801px){
     footer nav {
         display: flex;
         justify-content: space-around;
-        /* background-color: red; */
+        background-color: red; 
         width: 70%; 
     }
 } */
@@ -396,25 +396,25 @@ a:hover {
     ======================= * do not touch!
     ======================= * do naught! 
 */
-@media only screen and (min-width:501px) and (max-width:800px) {
+@media (max-width:800px) {
     .bottom-content {
         display: flex;
         flex-wrap: wrap;
         align-items: flex-start;
-        /* background-color: blue; */
+        
     }
     .firstwo {
-        /* background-color: red; */
+       
         width: 50% !important;
     }
     .last {
-        /* width: 100%; */
+        width: 100%;
         padding: 0 25% 0 25% !important;
     }
     footer nav {
         display: flex;
         justify-content: center;
-        /* background-color: red; */
+        
         width: 100%;
         
     }
@@ -422,7 +422,8 @@ a:hover {
         padding: 10px;
         font-size: 1rem;
     }
-}
+} 
+
 
 /*  ======================= MOBILE-ONLY 
     ======================= * do not touch!
@@ -476,6 +477,30 @@ a:hover {
         font-size: 1rem;
         padding-bottom: 5%;
     }
+/* FIX */
+    .bottom-content {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        /* background-color: green; */
+        
+    }
+    .firstwo {
+        width: 100% !important;
+        /* background-color: blue; */
+        padding: 0;
+        margin: 0;
+    }
+    .last {
+        width: 100%;
+        /* background-color: red; */
+        padding: 0 0 0 5% !important;
+        margin: 0 !important;
+    }
+    .middle-content {
+        border-bottom: none;
+    }
+/* END OF FIX */
     .top-content h2, .bottom-content h2 {
         font-size: 1.5rem;
     }
